--- a/public/backend.css
+++ b/public/backend.css
@@ -34,7 +34,7 @@ fieldset { border: none; }
 textarea { padding: 5px 10px; border: 1px solid #CCC; border-radius: 3px; background-image: url(theme/bg_textbox.png); background-repeat: repeat-x; font-family: Tahoma, Arial; color: #666666 }
 input { border: 1px solid #CCC; border-radius: 3px; background-image:url(theme/bg_textbox.png); font-family: 'Open Sans', Arial; font-size: 13px; color: #666666; }
 input[type=checkbox] { width: auto !important; padding: 0px !important; cursor: pointer }
-input[type=text] { width: 300px; height: 22px !important; padding: 0px 10px }
+input[type=text], input[type=url] { width: 300px; height: 22px !important; padding: 0px 10px }
 input[type=submit], input[type=reset] { height: 26px; background-image: url(theme/bg_button.png); color: #666666; } /* height = input["text"].height + 4px */
 input[type=file] { height: 26px; } /* height = input["text"].height + 4px */
 input[type=button], button { padding: 0px 10px; border: 1px solid #CCC; border-radius: 3px; height: 26px; background-image: url(theme/bg_button.png); color: #666666; } /* height = input["text"].height + 4px */
@@ -65,7 +65,7 @@ h1.page-title { }
 .form-group label:after { /* content: ':'; */ }
 .form-group label.full-line { display: block; width: auto; height: 30px; line-height: 30px; padding: 0px 10px; border: 1px solid #EFEFEF; background-image: url(theme/bg_textbox.png); background-repeat: repeat-x }
 .form-group input { width: 40%; padding: 5px 10px; }
-.form-group input[type=text]:focus, .form-group input[type=password]:focus { border-color: #ff6100; color: #4082E3 }
+.form-group input[type=text]:focus, .form-group input[type=password]:focus, .form-group input[type=url]:focus { border-color: #ff6100; color: #4082E3 }
 .form-group textarea { width: 40%; height: 100px; vertical-align: bottom; }
 .form-group textarea:focus { border-color: #ff6100; color: #4082E3 }
 .form-actions { padding-top: 20px }
