Added slugable attribute to models, fixed registration bug

--- a/public/base.css
+++ b/public/base.css
@@ -10,6 +10,8 @@ table { width: 100%; border-collapse: collapse }
 
 form { width: 100%; margin: 0px; padding: 0px }
 
+hr { border: none; border-bottom: 1px solid silver }
+
 /*
  * Classes
  */
