--- a/public/base.css
+++ b/public/base.css
@@ -30,3 +30,9 @@ ul.pagination { list-style: none; margin: 0px; padding: 0px }
 ul.pagination li { display: list-item; float: left; margin: 0px; padding: 2px 5px }
 
 .numeric-input { text-align: right }
+
+.spoiler-wrapper { margin: 20px 0px; padding: 0px 10px; background-color: #EEE; }
+.spoiler-wrapper.show { padding-bottom: 10px; }
+.spoiler-wrapper .spoiler-toggle { padding: 10px 0px; content: '...'; cursor: pointer }
+.spoiler { height: 0px;  overflow: hidden; }
+.spoiler-wrapper.show .spoiler { height: auto; overflow: visible; }
