--- a/public/frontend.css
+++ b/public/frontend.css
@@ -59,6 +59,18 @@ h1.page-title { }
 .form-actions { }
 .form-actions input[type=submit], .form-actions button { margin-right: 10px; }
 
+/* Slider Default Styling - Feel free to overwrite */
+.slider { position: relative; width: 100%; height: 245px; /* Height of a single slide */ }
+.slider .slides { position: absolute; left: 0px; top: 0px; width: 100%; height: 100% }
+.slider .slides ul { position: relative; width: 100%; height: 100%; overflow: hidden; }
+.slider .slides ul li { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; }
+.slider .to-left { position: absolute; left: 0px; top: 40%; width: 35px; height: 35px; line-height: 35px; background-color: rgba(0, 0, 0, 0.5); color: white; text-align: center; }
+.slider .to-right { position: absolute; right: 0px; top: 40%; width: 35px; height: 35px; line-height: 35px; background-color: rgba(0, 0, 0, 0.5); color: white; text-align: center }
+.slider .to-left:hover, .slider .to-right:hover { background-color: rgba(0, 0, 0, 1); }
+.slider .buttons { position: absolute; right: 20px; bottom: 20px; }
+.slider .buttons li { width: 30px; height: 30px; line-height: 30px; margin-left: 3px !important; background-color: rgba(0, 0, 0, 0.5); color: white; cursor: pointer; text-align: center; }
+.slider .buttons li.active{ background-color: rgba(0, 0, 0, 1); }
+
 /*
  * Modules
  */
