--- a/public/frontend.css
+++ b/public/frontend.css
@@ -83,7 +83,21 @@ h1.page-title { }
 
 .page-videos .video { float: left; width: 33%; text-align: center; }
 .page-videos .video img { width: 90% }
+
 .page-videos .video-player iframe { width: 100%; border: none }
+
+.page-galleries .galleries .item { float: left; display: block; width: 20%; height: 100px; overflow: hidden }
+.page-galleries .galleries .image { width: 100%; height: 100%; background-size: cover; background-position: center; background-repeat: no-repeat; transition: all 0.3s ease; }
+.page-galleries .galleries .image:hover { transform: scale(1.1, 1.1); transition: all 0.3s ease; }
+
+.page-galleries .images .image { text-align: center; }
+.page-galleries .images .image img { max-width: 100%; max-height: 500px; }
+.page-galleries .images .previews-wrapper { height: 100px; overflow: hidden }
+.page-galleries .images .previews { height: 100%; }
+.page-galleries .images .previews .item { float: left; display: block; width: 100px; height: 100%; overflow: hidden }
+.page-galleries .images .previews .image { width: 100%; height: 100%; background-size: cover; background-position: center; background-repeat: no-repeat; transition: all 0.3s ease; }
+.page-galleries .images .previews .image:hover { transform: scale(1.1, 1.1); transition: all 0.3s ease; }
+.page-galleries .images .previews .item.active .image { transform: scale(1.1, 1.1); transition: all 0.3s ease; }
 
 /*
  * Mainlayout
