--- a/public/frontend.css
+++ b/public/frontend.css
@@ -91,17 +91,21 @@ h1.page-title { }
 .page-galleries .galleries .image:hover { transform: scale(1.1, 1.1); transition: all 0.3s ease; }
 
 .page-galleries .images .image { text-align: center; }
-.page-galleries .images .image img { max-width: 100%; max-height: 500px; }
+.page-galleries .images .image img { max-width: 100%; max-height: 500px; cursor: zoom-in; }
 .page-galleries .images .previews-wrapper { position: relative; height: 100px; overflow: hidden }
 .page-galleries .images .previews { height: 100%; }
-.page-galleries .images .previews .item { float: left; display: block; width: 100px; height: 100%; overflow: hidden }
+.page-galleries .images .previews .item { float: left; display: block; width: 100px; height: 100%; overflow: hidden; }
 .page-galleries .images .previews .image { width: 100%; height: 100%; background-size: cover; background-position: center; background-repeat: no-repeat; transition: all 0.3s ease; }
 .page-galleries .images .previews .image:hover { transform: scale(1.1, 1.1); transition: all 0.3s ease; }
-.page-galleries .images .previews .item.active .image { transform: scale(1.1, 1.1); transition: all 0.3s ease; }
+.page-galleries .images .previews .item.active {  }
 .page-galleries .images .previews-wrapper .link { opacity: 0.5; position: absolute; top: 0px; height: 100%; width: 50px; line-height: 100px; background-color: rgba(0, 0, 0, 0.5); color: white; text-align: center; }
 .page-galleries .images .previews-wrapper:hover .link { opacity: 1 }
 .page-galleries .images .previews-wrapper .to-left { left: 0px; }
 .page-galleries .images .previews-wrapper .to-right { right: 0px; }
+
+.page-downloads .downloadcats .downloadcat { display: block; float: left; width: 100px; margin: 0px 20px 20px 20px; text-align: center; }
+.page-downloads .downloads .download { display: block; float: left; width: 100px; margin: 0px 20px 20px 20px; text-align: center; background-image: url(theme/file.png); background-position: center top; background-repeat: no-repeat; }
+.page-downloads .downloads .download a { display: block; padding-top: 100px; background-position: center 20px; background-repeat: no-repeat; }
 
 /*
  * Mainlayout
