--- a/public/frontend.css
+++ b/public/frontend.css
@@ -104,6 +104,10 @@ h1.page-title { }
 .page-galleries .images .previews-wrapper .to-left { left: 0px; }
 .page-galleries .images .previews-wrapper .to-right { right: 0px; }
 
+.widget-galleries li { width: 20%; height: 100px }
+.widget-galleries .item { display: block; width: 100%; height: 100% }
+.widget-galleries .item div { width: 100%; height: 100% }
+
 .page-downloads .downloadcats .downloadcat { display: block; float: left; width: 100px; margin: 0px 20px 20px 20px; text-align: center; }
 .page-downloads .downloads .download { display: block; float: left; width: 100px; margin: 0px 20px 20px 20px; text-align: center; background-image: url(theme/file.png); background-position: center top; background-repeat: no-repeat; }
 .page-downloads .downloads .download a { display: block; padding-top: 100px; background-position: center 20px; background-repeat: no-repeat; }
