--- a/public/backend.css
+++ b/public/backend.css
@@ -108,6 +108,8 @@ ul.pagination li.disabled { display: none }
 /* Tooltip */
 #tooltip { display: none; position: absolute; background: #232323; padding: 5px; opacity: 1.0; border-radius: 3px; font-size: 13px; color: white }
 #tooltip img { max-width: 600px; max-height: 450px }
+#tooltip p { margin: 0px 0px 10px 0px }
+#tooltip p:last-child { margin: 0px }
 .hover-ui { display: none; }
 
 /* Confirm Question */
