--- a/public/frontend.css
+++ b/public/frontend.css
@@ -50,6 +50,7 @@ h1.page-title { }
 /* Alert */
 .alert { border: 2px solid silver; }
 .alert h2 { font-size: 14px; }
+.alert button { padding: 0px 10px }
 
 /* Form */
 .form-errors { }
@@ -129,6 +130,25 @@ h1.page-title { }
 .page-downloads .downloads .download { display: block; float: left; width: 100px; margin: 0px 20px 20px 20px; text-align: center; background-image: url(theme/file.png); background-position: center top; background-repeat: no-repeat; }
 .page-downloads .downloads .download a { display: block; padding-top: 100px; background-position: center 20px; background-repeat: no-repeat; }
 
+.page-matches {  }
+.page-matches .overview div { width: 33%; text-align: center; float: left }
+.page-matches .overview div > span { display: block }
+.page-matches .overview .mid { padding-top: 40px; font-size: 30px; }
+.page-matches .overview .mid .left-win { color: green }
+.page-matches .overview .mid .left-lose { color: red }
+.page-matches .overview .mid .left-draw { color: orange }
+.page-matches .details { margin-bottom: 20px; padding-top: 20px; }
+.page-matches div.scores .item { width: 33%; float: left; text-align: center; }
+.page-matches div.scores .item:nth-child(n+4) { margin-top: 20px } /* Will only affect the 4th, 5th etc. item */
+.page-matches div.scores .item img { max-width: 100%; }
+.page-matches div.scores .item span { display: block; }
+
+.widget-matches-latest li { position: relative; }
+.widget-matches-latest li img { float: left; margin-right: 10px }
+.widget-matches-latest li .scores { position: absolute; right: 0px; top: 0px; }
+.widget-matches-latest li .scores .win { color: green }
+.widget-matches-latest li .scores .lose { color: red }
+.widget-matches-latest li .scores .draw { color: orange }
 
 /*
  * Mainlayout
