Added streams widget

--- a/public/frontend.css
+++ b/public/frontend.css
@@ -107,6 +107,9 @@ h1.page-title { }
 
 .page-streams .stream-player iframe { width: 100%; border: none }
 
+.widget-streams a { display: block; position: relative; wo }
+.widget-streams .viewers { float: right; }
+
 .page-galleries .galleries .item { float: left; display: block; width: 20%; height: 100px; overflow: hidden }
 .page-galleries .galleries .image { width: 100%; height: 100%; background-size: cover; background-position: center; background-repeat: no-repeat; transition: all 0.3s ease; }
 .page-galleries .galleries .image:hover { transform: scale(1.1, 1.1); transition: all 0.3s ease; }
