--- a/scss/base.scss
+++ b/scss/base.scss
@@ -18,14 +18,16 @@ form hr { margin: 30px 0px }
  */
 
 .clearfix:after { display: block; clear: both; content: '.'; height: 0; visibility: hidden; }
-.hidden { display: none }
-.center-h { text-align: center; }
+.hidden { display: none; visibility: hidden; }
+.text-left { text-align: left; }
+.text-center { text-align: center; }
+.text-right { text-align: right; }
 
-ul.layout-h { list-style: none; margin: 0px; padding: 0px }
-ul.layout-h li { display: list-item; float: left; margin: 0px; }
+ul.list-inline { list-style: none; margin: 0px; padding: 0px }
+ul.list-inline li { display: list-item; float: left; margin: 0px; }
 
-ul.layout-v { list-style: none; margin: 0px; padding: 0px }
-ul.layout-v li { margin: 0px; float: none }
+ul.list-unstyled { list-style: none; margin: 0px; padding: 0px }
+ul.list-unstyled li { margin: 0px; float: none }
 
 ul.pagination { list-style: none; margin: 0px; padding: 0px }
 ul.pagination li { display: list-item; float: left; margin: 0px; padding: 2px 5px }
@@ -35,11 +37,11 @@ ul.pagination li { display: list-item; float: left; margin: 0px; padding: 2px 5p
 .spoiler-wrapper { margin: 20px 0px; padding: 0px 10px; background-color: #EEE; }
 .spoiler-wrapper.show { padding-bottom: 10px; }
 .spoiler-wrapper .spoiler-toggle { padding: 10px 0px; content: '...'; cursor: pointer }
-.spoiler { height: 0px;  overflow: hidden; }
+.spoiler { height: 0px; overflow: hidden; }
 .spoiler-wrapper.show .spoiler { height: auto; overflow: visible; }
 
 .alert { position: relative;  }
-.alert button { position: absolute; right: 10px; top: 0px; border: none; background: none; cursor: pointer; }
+.alert button.close { position: absolute; right: 10px; top: 0px; border: none; background: none; cursor: pointer; }
 .alert h2 { margin: 0px; }
 .alert-success { border-color: #d6e9c6 !important; background: #dff0d8 !important }
 .alert-warning { border-color: #faebcc !important; background: #fcf8e3 !important }
